--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
         "php": ">=7.1.3",
-        "laravel-enso/core": "4.1.0"
+        "laravel-enso/core": "^4.1.0"
     },
     "autoload": {
         "psr-4": {
