--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
         "php": ">=7.1.3",
-        "laravel-enso/core": "4.3.*"
+        "laravel-enso/core": "4.3.*",
+        "laravel-enso/helpers": "1.11.*"
     },
     "autoload": {
         "psr-4": {
