--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,11 @@
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
         "php": ">=7.1.3",
-        "laravel-enso/core": "4.3.*",
-        "laravel-enso/helpers": "1.11.*"
+        "laravel-enso/core": "4.4.*",
+        "laravel-enso/enums": "1.0.*",
+        "laravel-enso/forms": "3.2.*",
+        "laravel-enso/migrator": "1.0.*",
+        "laravel-enso/helpers": "1.12.*"
     },
     "autoload": {
         "psr-4": {
