--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
         "laravel": {
             "providers": [
                 "LaravelEnso\\Calendar\\AppServiceProvider",
-                "LaravelEnso\\Calendar\\AuthServiceProvider",
-                "LaravelEnso\\Calendar\\EnumServiceProvider"
+                "LaravelEnso\\Calendar\\CalendarServiceProvider",
+                "LaravelEnso\\Calendar\\AuthServiceProvider"
             ]
         }
     }
