fix bugs. adds future updating sets the frequency to once temporary

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
             "providers": [
                 "LaravelEnso\\Calendar\\AppServiceProvider",
                 "LaravelEnso\\Calendar\\CalendarServiceProvider",
+                "LaravelEnso\\Calendar\\UserServiceProvider",
                 "LaravelEnso\\Calendar\\AuthServiceProvider"
             ]
         }
