--- a/composer.json
+++ b/composer.json
@@ -42,18 +42,14 @@
             "LaravelEnso\\Calendar\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "LaravelEnso\\Calendars\\tests\\": "tests/"
-        }
-    },
     "extra": {
         "laravel": {
             "providers": [
                 "LaravelEnso\\Calendar\\AppServiceProvider",
+                "LaravelEnso\\Calendar\\AuthServiceProvider",
                 "LaravelEnso\\Calendar\\CalendarServiceProvider",
-                "LaravelEnso\\Calendar\\UserServiceProvider",
-                "LaravelEnso\\Calendar\\AuthServiceProvider"
+                "LaravelEnso\\Calendar\\EnumServiceProvider",
+                "LaravelEnso\\Calendar\\UserServiceProvider"
             ]
         }
     }
