--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     ],
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
+        "php": ">=7.4.0",
         "laravel-enso/core": "4.6.*",
         "laravel-enso/enums": "1.1.*",
         "laravel-enso/forms": "3.3.*",
