--- a/composer.json
+++ b/composer.json
@@ -31,12 +31,12 @@
     ],
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
-        "php": ">=7.4.0",
         "laravel-enso/core": "4.7.*",
         "laravel-enso/enums": "1.1.*",
         "laravel-enso/forms": "3.3.*",
         "laravel-enso/helpers": "1.14.*",
-        "laravel-enso/migrator": "1.0.*"
+        "laravel-enso/migrator": "1.0.*",
+        "php": ">=7.4.0"
     },
     "autoload": {
         "psr-4": {
