--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,10 @@
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
         "laravel-enso/core": "4.7.*",
-        "laravel-enso/enums": "1.1.*",
-        "laravel-enso/forms": "3.3.*",
-        "laravel-enso/helpers": "1.14.*",
-        "laravel-enso/migrator": "1.0.*",
-        "php": ">=7.4.0"
+        "laravel-enso/enums": "1.2.*",
+        "laravel-enso/forms": "3.4.*",
+        "laravel-enso/helpers": "1.15.*",
+        "laravel-enso/migrator": "1.1.*"
     },
     "autoload": {
         "psr-4": {
