--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,12 @@
         "laravel-enso/core": "4.7.*",
         "laravel-enso/enums": "1.2.*",
         "laravel-enso/forms": "3.4.*",
+        "laravel-enso/people": "2.5.*",
         "laravel-enso/helpers": "1.15.*",
+        "laravel-enso/select": "3.3.*",
+        "laravel-enso/permissions": "3.4.*",
+        "laravel-enso/track-who": "1.9.*",
+        "laravel-enso/rememberable": "2.2.*",
         "laravel-enso/migrator": "1.1.*"
     },
     "autoload": {
