--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,9 @@
     ],
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
-        "laravel-enso/core": "^7.0",
-        "laravel-enso/enums": "^2.0",
+        "laravel-enso/core": "^9.0",
+        "laravel-enso/dynamics": "^3.0",
+        "laravel-enso/enums": "^3.0",
         "laravel-enso/forms": "^4.0",
         "laravel-enso/people": "^3.0",
         "laravel-enso/helpers": "^2.0",
@@ -53,9 +54,7 @@
             "providers": [
                 "LaravelEnso\\Calendar\\AppServiceProvider",
                 "LaravelEnso\\Calendar\\AuthServiceProvider",
-                "LaravelEnso\\Calendar\\CalendarServiceProvider",
-                "LaravelEnso\\Calendar\\EnumServiceProvider",
-                "LaravelEnso\\Calendar\\UserServiceProvider"
+                "LaravelEnso\\Calendar\\CalendarServiceProvider"
             ]
         }
     }
