--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,10 @@
     "homepage": "https://https://github.com/laravel-enso/calendar",
     "require": {
         "laravel-enso/core": "^9.0",
-        "laravel-enso/dynamics": "^3.0",
-        "laravel-enso/enums": "^3.0",
+        "laravel-enso/dynamic-methods": "^3.0",
         "laravel-enso/forms": "^4.0",
         "laravel-enso/people": "^3.0",
-        "laravel-enso/helpers": "^2.0",
+        "laravel-enso/helpers": "^3.0",
         "laravel-enso/select": "^4.0",
         "laravel-enso/permissions": "^4.0",
         "laravel-enso/track-who": "^2.0",
